--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             <h2 class="text-xl font-semibold mb-4">Student Details</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div>
-                    <p><strong>Name:</strong> Ahmad Faiz</p>
-                    <p><strong>Student ID:</strong> 2023123456</p>
+                    <p><strong>Name:</strong> Mohd Amirul Aleeq Che Karola</p>
+                    <p><strong>Student ID:</strong> 2023142069</p>
                     <p><strong>Program:</strong> Bachelor of Computer Science</p>
-                    <p><strong>Faculty:</strong> Faculty of Computer and Mathematical Sciences</p>
-                    <p><strong>Email:</strong> faiz@student.uitm.edu.my</p>
+                    <p><strong>Faculty:</strong> College of Computing, Informatics and Mathematics</p>
+                    <p><strong>Email:</strong> 2023142069@student.uitm.edu.my</p>
                 </div>
                 <div>
-                    <p><strong>Phone:</strong> +6012-3456789</p>
+                    <p><strong>Phone:</strong> +601129451689</p>
                     <p><strong>Address:</strong> 12, Jalan Merdeka, Shah Alam, Selangor</p>
                     <p><strong>Enrollment Year:</strong> 2023</p>
                     <p><strong>Status:</strong> Active</p>
