--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div>
                     <p><strong>Phone:</strong> +601129451689</p>
-                    <p><strong>Address:</strong> 12, Jalan Merdeka, Shah Alam, Selangor</p>
+                    <p><strong>Address:</strong> Lot 1291, Kampung Binjal Kubang Terap, 17000 Pasir Mas, Kelantan</p>
                     <p><strong>Enrollment Year:</strong> 2023</p>
                     <p><strong>Status:</strong> Active</p>
                 </div>
