--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Details | UiTM</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .card-container {
@@ -43,7 +44,7 @@
 <body class="bg-gray-100 font-sans">
     <header class="bg-blue-900 text-white py-4">
         <div class="max-w-6xl mx-auto flex items-center justify-between px-6">
-            <img src="uitm-logo.png" alt="UiTM Logo" class="h-12">
+            <img src="uitmlogo.png" alt="UiTM Logo" class="h-12">
             <nav>
                 <ul class="flex space-x-6">
                     <li><a href="#" class="hover:underline">Home</a></li>
@@ -80,8 +81,8 @@
             <div class="flex justify-center">
                 <div class="card-container" onclick="toggleCard()">
                     <div class="card" id="studentCard">
-                        <img src="front-card.jpg" alt="Student Card Front" class="card-face w-48 h-64 rounded-lg shadow-md">
-                        <img src="back-card.jpg" alt="Student Card Back" class="card-face card-back w-48 h-64 rounded-lg shadow-md">
+                        <img src="kadpelajard.png" alt="Student Card Front" class="card-face w-48 h-64 rounded-lg shadow-md">
+                        <img src="kadpelajarb.png" alt="Student Card Back" class="card-face card-back w-48 h-64 rounded-lg shadow-md">
                     </div>
                 </div>
             </div>
