--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        body {
+    background-image: url('https://uitm.edu.my/images/slideshow/thebysubject2025_1webbanner.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
         .card-container {
             perspective: 1000px;
         }
