--- a/index.html
+++ b/index.html
@@ -46,14 +46,23 @@
     font-weight: bold;
     animation: flash 1s infinite;
 }
+
+        img {
+    image-rendering: crisp-edges;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+}
+
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
     <header class="bg-blue-900 text-white py-4">
         <div class="max-w-6xl mx-auto flex items-center justify-between px-6">
-            <img src="uitmlogo.png" alt="UiTM Logo" class="h-12">
-            <nav>
-                <ul class="flex space-x-6">
+            <img src="uitm-logo.png" alt="UiTM Logo" class="h-12">
+            <button id="menu-btn" class="md:hidden text-white text-xl">☰</button>
+            <nav id="menu" class="hidden md:flex space-x-6">
+                <ul class="md:flex space-x-6">
                     <li><a href="#" class="hover:underline">Home</a></li>
                     <li><a href="#" class="hover:underline">About</a></li>
                     <li><a href="#" class="hover:underline">Student Info</a></li>
@@ -107,6 +116,9 @@
         function toggleCard() {
             document.getElementById("studentCard").classList.toggle("flipped");
         }
+        document.getElementById("menu-btn").addEventListener("click", function() {
+            document.getElementById("menu").classList.toggle("hidden");
+        });
     </script>
 </body>
 </html>
