--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
     image-rendering: -o-crisp-edges;
     image-rendering: -webkit-optimize-contrast;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
+body {
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+}
 
     </style>
 </head>
