--- a/index.html
+++ b/index.html
@@ -59,12 +59,29 @@ body {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
 
+        #menu {
+    transition: all 0.3s ease-in-out;
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 10px;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    display: none;
+}
+
+#menu.show {
+    display: block;
+    opacity: 1;
+}
+
+        
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
     <header class="bg-blue-900 text-white py-4">
         <div class="max-w-6xl mx-auto flex items-center justify-between px-6">
-            <img src="uitm-logo.png" alt="UiTM Logo" class="h-12">
+            <img src="uitmlogo.png" alt="UiTM Logo" class="h-12">
             <button id="menu-btn" class="md:hidden text-white text-xl">☰</button>
             <nav id="menu" class="hidden md:flex space-x-6">
                 <ul class="md:flex space-x-6">
@@ -122,8 +139,10 @@ body {
             document.getElementById("studentCard").classList.toggle("flipped");
         }
         document.getElementById("menu-btn").addEventListener("click", function() {
-            document.getElementById("menu").classList.toggle("hidden");
-        });
+    let menu = document.getElementById("menu");
+    menu.classList.toggle("show");
+});
+
     </script>
 </body>
 </html>
