--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Student Details | UiTM</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -53,11 +54,7 @@
     image-rendering: -o-crisp-edges;
     image-rendering: -webkit-optimize-contrast;
 }
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
-body {
-    font-family: 'Poppins', Arial, Helvetica, sans-serif;
-}
 
  #menu {
             transition: max-height 0.3s ease-in-out;
@@ -74,6 +71,9 @@ body {
             max-height: 200px;
             padding: 10px;
         }
+body {
+    font-family: 'Montserrat', Arial, sans-serif;
+}
 
 
         
