--- a/index.html
+++ b/index.html
@@ -56,21 +56,24 @@
 }
 
 
- #menu {
-            transition: max-height 0.3s ease-in-out;
-            max-height: 0;
-            overflow: hidden;
-            background-color: white;
-            position: absolute;
-            top: 60px;
-            left: 0;
-            width: 100%;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        #menu.show {
-            max-height: 200px;
-            padding: 10px;
-        }
+#menu {
+    transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    background-color: white;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+#menu.show {
+    max-height: 200px;
+    opacity: 1;
+    padding: 10px;
+}
+
 body {
     font-family: 'Montserrat', Arial, sans-serif;
 }
@@ -84,8 +87,8 @@ body {
         <div class="max-w-6xl mx-auto flex items-center justify-between px-6">
             <img src="uitmlogo.png" alt="UiTM Logo" class="h-12">
             <button id="menu-btn" class="md:hidden text-white text-xl">☰</button>
-            <nav id="menu" class="hidden md:flex space-x-6">
-                <ul class="md:flex space-x-6">
+            <nav id="menu" class="md:flex space-x-6 md:relative md:block md:bg-transparent md:shadow-none md:max-h-full hidden">
+                <ul class="md:flex space-x-6 flex-col md:flex-row bg-white md:bg-transparent p-4 md:p-0 shadow-md md:shadow-none">
                     <li><a href="#" class="hover:underline">Home</a></li>
                     <li><a href="#" class="hover:underline">About</a></li>
                     <li><a href="#" class="hover:underline">Student Info</a></li>
@@ -97,7 +100,7 @@ body {
     
     <div class="max-w-4xl mx-auto p-6">
         <div class="bg-white shadow-md rounded-lg p-6 mt-6">
-            <h2 class="text-xl font-semibold mb-4">Student Details</h2>
+            <h2 class="text-xl font-bold mb-4">Student Details</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div>
                     <p><strong>Name:</strong> Mohd Amirul Aleeq Che Karola</p>
@@ -116,7 +119,7 @@ body {
         </div>
         
         <div class="bg-white shadow-md rounded-lg p-6 mt-6 text-center">
-            <h2 class="text-xl font-semibold mb-4">Student Card</h2>
+            <h2 class="text-xl font-bold mb-4">Student Card</h2>
             <div class="flex justify-center">
                 <div class="card-container" onclick="toggleCard()">
                     <div class="card" id="studentCard">
@@ -139,10 +142,11 @@ body {
         function toggleCard() {
             document.getElementById("studentCard").classList.toggle("flipped");
         }
-               document.getElementById("menu-btn").addEventListener("click", function() {
-            let menu = document.getElementById("menu");
-            menu.classList.toggle("show");
-        });
+            document.getElementById("menu-btn").addEventListener("click", function() {
+                let menu = document.getElementById("menu");
+                menu.classList.toggle("show");
+            });
+
 
 
     </script>
