--- a/index.html
+++ b/index.html
@@ -61,20 +61,12 @@
     max-height: 0;
     opacity: 0;
     overflow: hidden;
-    background-color: white;
-    position: absolute;
-    top: 60px;
-    left: 0;
-    width: 100%;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 #menu.show {
     max-height: 200px;
     opacity: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
+
 
 
 body {
@@ -90,14 +82,15 @@ body {
         <div class="max-w-6xl mx-auto flex items-center justify-between px-6">
             <img src="uitmlogo.png" alt="UiTM Logo" class="h-12">
             <button id="menu-btn" class="md:hidden text-white text-xl">☰</button>
-            <nav id="menu" class="md:flex hidden flex-col md:flex-row md:relative md:block bg-white md:bg-transparent p-4 md:p-0 shadow-md md:shadow-none w-full md:w-auto">
-                <ul class="md:flex md:space-x-6">
-                    <li><a href="#" class="hover:underline">Home</a></li>
-                    <li><a href="#" class="hover:underline">About</a></li>
-                    <li><a href="#" class="hover:underline">Student Info</a></li>
-                    <li><a href="#" class="hover:underline">Contact</a></li>
-                </ul>
-            </nav>
+<nav id="menu" class="hidden md:flex flex-col md:flex-row absolute md:relative top-full md:top-auto left-0 w-full md:w-auto bg-white md:bg-transparent p-4 md:p-0 shadow-md md:shadow-none">
+    <ul class="md:flex md:space-x-6">
+        <li><a href="#" class="block py-2 px-4 hover:bg-gray-200 md:hover:bg-transparent">Home</a></li>
+        <li><a href="#" class="block py-2 px-4 hover:bg-gray-200 md:hover:bg-transparent">About</a></li>
+        <li><a href="#" class="block py-2 px-4 hover:bg-gray-200 md:hover:bg-transparent">Student Info</a></li>
+        <li><a href="#" class="block py-2 px-4 hover:bg-gray-200 md:hover:bg-transparent">Contact</a></li>
+    </ul>
+</nav>
+
         </div>
     </header>
     
@@ -146,18 +139,19 @@ body {
             document.getElementById("studentCard").classList.toggle("flipped");
         }
     
-        document.getElementById("menu-btn").addEventListener("click", function() {
+document.getElementById("menu-btn").addEventListener("click", function() {
     let menu = document.getElementById("menu");
     menu.classList.toggle("show");
 
     if (menu.classList.contains("show")) {
-        menu.style.display = "flex"; 
+        menu.style.display = "block"; 
     } else {
         setTimeout(() => {
             menu.style.display = "none"; 
         }, 300);
     }
 });
+
 
 
 
