--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body {
+/*         body {
     background-image: url('https://uitm.edu.my/images/slideshow/thebysubject2025_1webbanner.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-}
+} */
 
         .card-container {
             perspective: 1000px;
@@ -126,7 +126,7 @@ body {
                     <p><strong>Email:</strong> 2023142069@student.uitm.edu.my</p>
                 </div>
                 <div>
-                    <p><strong>Phone:</strong> +601129451689</p>
+                    <p><strong>Phone:</strong> 01129451689</p>
                     <p><strong>Address:</strong> Lot 1291, Kampung Binjal Kubang Terap, 17000 Pasir Mas, Kelantan</p>
                     <p><strong>Enrollment Year:</strong> 2023</p>
                     <p><strong>Status:</strong> <span class="status-active">Active</span></p>
