--- a/index.html
+++ b/index.html
@@ -85,7 +85,16 @@ body {
             }
         }
 
-        
+        nav a {
+    padding: 8px 12px;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+
+nav a:hover {
+    background-color: rgba(255, 255, 255, 0.3); /* Warna lebih terang untuk hover effect */
+}
+
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
