--- a/index.html
+++ b/index.html
@@ -122,10 +122,15 @@ nav a:hover {
             </ul>
         </nav>
     </header>
+
+<div class="max-w-4xl mx-auto p-6">
+    <h2 class="text-lg font-bold text-gray-700 text-center">Student Information System of Universiti Teknologi MARA</h2>
+</div>
+
     
     <div class="max-w-4xl mx-auto p-6">
         <div class="bg-white shadow-md rounded-lg p-6 mt-6">
-            <h2 class="text-xl font-bold mb-4">Student Details</h2>
+            <h2 class="text-xl font-bold mb-4 text-center">Student Details</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div>
                     <p><strong>Name:</strong> Mohd Amirul Aleeq Che Karola</p>
