--- a/index.html
+++ b/index.html
@@ -124,13 +124,14 @@ nav a:hover {
     </header>
 
 <div class="max-w-4xl mx-auto p-6">
-    <h2 class="text-lg font-bold text-gray-700 text-center">Student Information System of Universiti Teknologi MARA</h2>
+    <h2 class="text-4xl font-bold text-red-700 text-center">Student Information System of Universiti Teknologi MARA</h2>
 </div>
 
     
     <div class="max-w-4xl mx-auto p-6">
         <div class="bg-white shadow-md rounded-lg p-6 mt-6">
             <h2 class="text-xl font-bold mb-4 text-center">Student Details</h2>
+            <br>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div>
                     <p><strong>Name:</strong> Mohd Amirul Aleeq Che Karola</p>
@@ -150,6 +151,7 @@ nav a:hover {
         
         <div class="bg-white shadow-md rounded-lg p-6 mt-6 text-center">
             <h2 class="text-xl font-bold mb-4">Student Card</h2>
+            <br>
             <div class="flex justify-center">
                 <div class="card-container" onclick="toggleCard()">
                     <div class="card" id="studentCard">
