--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@ nav a:hover {
     </header>
 
 <div class="max-w-4xl mx-auto p-6">
-    <h2 class="text-4xl font-bold text-red-700 text-center">Student Information System of Universiti Teknologi MARA</h2>
+    <h2 class="text-2xl font-bold text-blue-600 text-center">Student Information System of Universiti Teknologi MARA</h2>
 </div>
+
 
     
     <div class="max-w-4xl mx-auto p-6">
@@ -143,7 +144,7 @@ nav a:hover {
                 <div>
                     <p><strong>Phone:</strong> 01129451689</p>
                     <p><strong>Address:</strong> Lot 1291, Kampung Binjal Kubang Terap, 17000 Pasir Mas, Kelantan</p>
-                    <p><strong>Enrollment Year:</strong> 2023</p>
+                    <p><strong>Enrolled:</strong> 2023</p>
                     <p><strong>Status:</strong> <span class="status-active">Active</span></p>
                 </div>
             </div>
