--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@ nav a:hover {
     </header>
 
 <div class="max-w-4xl mx-auto p-6">
-    <h2 class="text-2xl font-bold text-blue-600 text-center">Student Information System of Universiti Teknologi MARA</h2>
+    <h2 class="text-lg font-bold text-black-700 text-center">Student Information System</h2>
 </div>
+
 
 
     
