--- a/index.html
+++ b/index.html
@@ -85,15 +85,18 @@ body {
             }
         }
 
-        nav a {
+       nav a {
     padding: 8px 12px;
     border-radius: 4px;
-    transition: background-color 0.3s;
+    transition: background-color 0.3s, color 0.3s;
+    text-decoration: none;
 }
 
 nav a:hover {
-    background-color: rgba(255, 255, 255, 0.3); /* Warna lebih terang untuk hover effect */
+    background-color: rgba(0, 0, 0, 0.1); /* Warna cerah untuk highlight */
+    text-decoration: none; /* Buang garis bawah */
 }
+
 
     </style>
 </head>
