--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@ nav a:hover {
     background-color: rgba(0, 0, 0, 0.1); /* Warna cerah untuk highlight */
     text-decoration: none; /* Buang garis bawah */
 }
+.page-title {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    color: #000000;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
 
 
     </style>
@@ -134,6 +143,7 @@ nav a:hover {
 
     
     <div class="max-w-4xl mx-auto p-6">
+        <h2 class="page-title">Student Management Portal</h2>
         <div class="bg-white shadow-md rounded-lg p-6 mt-6">
             <h2 class="text-xl font-bold mb-4 text-center">Student Details</h2>
             <br>
